--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -10,8 +10,16 @@
   display: flex;
 }
 
-.col, .col-6, .col-lg-6 {
-  border: 1px solid white;
+.col, .col-8, .col-lg-8{
+  /* border: 1px solid white; */
   height: 100px;
   width: 100px;
+}
+
+.menu{
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height:90vh;
+  /* border: 1px solid white; */
 }
