--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -1,9 +1,9 @@
 .App {
   height: 100%;
   width: 100%;
-  /* overflow: hidden; */
+  overflow: hidden;
   padding: 25px;
-  /* display: flex; */
+  display: flex;
 }
 
 .row {
