--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
-  height: 100vh;
+  /* height: 100vh; */
   overflow:'hidden'
 }
 
