--- a/src/stylesheets/HomePage.css
+++ b/src/stylesheets/HomePage.css
@@ -1,13 +1,4 @@
 
-.menu {
-    display:flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 93vh;
-    position: fixed;
-    /* border: 1px solid white; */
-}
-
 .logo {
     font-family: p-semibold;
 }
@@ -75,7 +66,8 @@ td > h6 {
 }
 .page-title {
     height:25vh;
-    margin-top:10vh;
+    margin-top:3vh;
+    margin-bottom: 3vh;
     display: flex;
     justify-content: center;
     align-items: center;
