--- a/src/stylesheets/Menu.css
+++ b/src/stylesheets/Menu.css
@@ -1,3 +1,31 @@
 .menu-container{
     height: 100vh;
 }
+
+.active-link {
+    font-weight: 800;
+    /* text-decoration: underline; */
+    color:rgb(241, 185, 30)
+}
+.tr-underline {
+    border-bottom: 1px solid white;
+}
+
+
+.menu {
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 93vh;
+    position: fixed;
+
+}
+
+.right-menu {
+    display:flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
+    height: 93vh;
+    position: fixed;
+}
