--- a/src/stylesheets/PicturePage.css
+++ b/src/stylesheets/PicturePage.css
@@ -24,3 +24,13 @@
     justify-content: center;
     align-items: center;
 }
+
+.max-height {
+    height:100vh;
+}
+
+.center-content {
+   display: flex;
+   justify-content: center;
+   flex-direction: column;
+}
