--- a/src/stylesheets/contact.css
+++ b/src/stylesheets/contact.css
@@ -1,5 +1,16 @@
 .contact-card {
-    height: 100;
-    width: 200;
-    border-style: solid white;
+    padding:30px 30px 30px 30px !important;
+    border-style: solid;
+}
+
+.right-align {
+    text-align: right;
+}
+
+.remove-margin {
+    margin:0
+}
+
+.small-margin {
+    margin-bottom: 5px;;
 }
