--- a/src/stylesheets/Menu.css
+++ b/src/stylesheets/Menu.css
@@ -4,8 +4,12 @@
 
 .active-link {
     font-weight: 900;
-    text-decoration: underline;
+    /* text-decoration: underline; */
     color:rgb(255, 255, 255)
+}
+.dim-text {
+    font-weight: 100;
+    color:rgba(255, 255, 255, 0.801);
 }
 .tr-underline {
     border-bottom: 1px solid white;
