--- a/src/stylesheets/Hamburger.css
+++ b/src/stylesheets/Hamburger.css
@@ -43,6 +43,7 @@
     background: #000000;
     padding-left: 1.5em;
     padding-top: 1em;
+    padding-bottom:2em;
     font-size: 1.15em;
   }
   
