--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
   --main-font-color: white;
   --second-font-color: #bdbdbd;
 }
+body{
+  background-color: var(--main-bg-color);
+}
 
 @font-face { 
   font-family: p-black; 
