--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --main-bg-color: black;
+  --main-bg-color: rgb(21, 21, 21);
   --main-font-color: white;
   --second-font-color: #bdbdbd;
 }
