--- a/src/stylesheets/Hamburger.css
+++ b/src/stylesheets/Hamburger.css
@@ -40,7 +40,7 @@
   
   /* General sidebar styles */
   .bm-menu {
-    background: #000000;
+    background: rgba(21, 21, 21);
     padding-left: 1.5em;
     padding-top: 1em;
     padding-bottom:2em;
